[project]
name = "ahbicht"
description = "Python Library to parse AHB expressions."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Annika Schlögl", email = "annika.schloegl@hochfrequenz.de" },
]
keywords = ["AHB", "Parsing", "Expressions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "lark>=1.1.4",
    "pytz",
    "efoli>=2.1.0",
    "pydantic>=2"
] # add all the dependencies here
dynamic = ["readme", "version"]

[project.optional-dependencies]
coverage = ["coverage==7.13.5"]
docs = ["sphinx==8.1.3", "sphinx-rtd-theme==3.1.0"]
formatting = ["black[jupyter]==26.3.1", "isort==8.0.1"]
json_schemas = []
linting = ["pylint==4.0.5"]
spellcheck = ["codespell==2.4.2"]
test_packaging = [
    "build==1.4.4",
    "setuptools==82.0.0",
    "setuptools-scm==9.2.2",
    "twine==6.2.0",
]
tests = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-datafiles==3.0.1",
    "pytest-mock==3.15.1",
]
type_check = ["mypy[pydantic]==1.20.2", "types-pytz==2026.1.1.20260408"]
dev = ["pip-tools"]

[tool.setuptools.dynamic]
readme = { file = "README.rst" }

[project.urls]
Changelog = "https://github.com/Hochfrequenz/ahbicht/releases"
Homepage = "https://github.com/Hochfrequenz/ahbicht"
Documentation = "https://ahbicht.readthedocs.io/en/latest/"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "fixme"

[tool.pytest.ini_options]
# When the mode is auto, all discovered async tests are considered asyncio-driven
# even if they have no @pytest.mark.asyncio marker.
# https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_mode = "auto"
markers = ["datafiles"]

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"


[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [{ path = "README.rst" }]

[tool.hatch.version]
source = "vcs"


[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
