[metadata]
url = https://github.com/Hochfrequenz/ahb_condition_expression_parser
project_urls =
    Documentation = https://bo4e-python.readthedocs.io/en/latest/
    Code = https://github.com/Hochfrequenz/ahb_condition_expression_parser
    Issue tracker = https://github.com/Hochfrequenz/ahb_condition_expression_parser/issues
license = mit
author = Annika Schlögl
author_email = annika.schloegl@hochfrequenz.de
description = Python Library to parse AHB expressions.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find:
package_dir = = src
include_package_data = True
python_requires = >=3.8
install_requires =
    aenum
    attr
    lark
    inject

[options.packages.find]
where = src
exclude =
    tests
