[metadata]
author = Annika Schlögl
author_email = annika.schloegl@hochfrequenz.de
description = Python Library to parse AHB expressions.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/Hochfrequenz/ahbicht
project_urls =
    Documentation = https://ahbicht.readthedocs.io/en/latest/
    Code = https://github.com/Hochfrequenz/ahbicht/
    Bug tracker = https://github.com/Hochfrequenz/ahbicht/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
license = mit
platforms = any

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    attrs>=21.4.0
    lark>=1.1.1
    inject
    marshmallow
    marshmallow_enum
    maus>=0.1.8
    pytz

[options.packages.find]
where = src
exclude =
    unittests

[options.package_data]
* = py.typed
